deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: movie-api
  template:
    metadata:
      labels:
        app: movie-api
    spec:
      containers:
        - name: movie-api
          image: rajspy/myapp:v2
          ports:
            - containerPort: 8000
          resources:        # ✅ FIXED
            requests:
              cpu: "100m"
            limits:         # ✅ lowercase
              cpu: "200m"
