pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: storage-test

spec:
  containers:
    - name: nginx
      image: nginx

      volumeMounts:
        - mountPath: "/data"
          name: storage

  volumes:
    - name: storage
      persistentVolumeClaim:
        claimName: raj-pvc
