redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis   # IMPORTANT 🔥
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
