service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-service
spec:
  type: NodePort
  selector:
    app: movie-api
  ports:
    - port: 80
      targetPort: 8000   # 🔥 FIX HERE
